update: correct contrast

--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -3,7 +3,7 @@
     .main-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto auto;
+        grid-template-rows: auto 1fr auto auto;
         gap: 1rem;
     }
 
@@ -28,20 +28,24 @@
 
     .data-section,
     .weather-section {
-        background: rgba(0, 0, 0, 0.5); /* Adding background for contrast */
-        color: #fff;
+        background: rgba(255, 255, 255, 0.75); /* Adding background for contrast */
+        color: #000;
         padding: 1rem;
         border-radius: 0.3rem;
     }
 
     .data-section h2, .weather-section h2 {
-        background-color: #022C43;
+        background-color: #055674;
         color: white;
         padding: 0.5rem;
         text-align: left;
         margin: -1rem 2rem 1.5rem -1.5rem;
     }
 
+    .weather-section h2 {
+        display: flex;
+        align-items: center;
+    }
 
     .data-table {
         padding: 1rem;
@@ -49,7 +53,7 @@
 
     .weather-section h2::after {
         content: url('../images/weather_icon_large.png'); /* Replace with your large icon URL */
-        float: right;
+        display: inline-block;
         width: 3rem; /* Adjust size as needed */
         height: auto;
         padding-left: 2rem;
